# mlopsdemo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  RENDER_TROUBLESHOOTING.md  local-test.sh  pyproject.toml  railway.json  render-fix.yaml  render.yaml  requirements-api.txt  requirements-dev.txt  requirements.txt  test-api.py
.github/workflows/: ci.yml  model-deployment.yml
docs/: api-documentation.md  deployment-guide.md  mlops-plan.md  testing-guide.md
docs/planning/: mlops-demo-plan.md
src/: __init__.py
src/api/: __init__.py  app.py
src/data/: __init__.py  data_loader.py
src/utils/: __init__.py
static/: index.html
tests/: __init__.py  conftest.py  test_data_loader.py  test_iris_model.py
